# vaxtify

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml  deploy.yaml
extension-web/: background.js  manifest.json
misc/arch-packaging/: PKGBUILD
misc/dbus-service/: dev.pustaczek.Vaxtify.service  solar.unneon.Vaxtify.service
misc/systemd-unit/: vaxtify.service
misc/webextension-manifest/: vaxtify.json
src/: activity.rs  cli.rs  config.rs  dbus.rs  dbusapi.rs  event.rs  filters.rs  input_webext.rs  input_x11.rs  ipc.rs  logger.rs  lookups.rs  main-webext.rs  main.rs  permits.rs  processes.rs  rules.rs  slots.rs  sources.rs  tabs.rs  timekeeper.rs  timeline.rs  util.rs  webext.rs
src/config/: kdl_duration.rs  kdl_time.rs  serde_duration.rs  serde_time.rs
src/dbus/: client.rs  server.rs
src/sources/: webext.rs
src/sources/webext/: background.js  distraction_oni.json  manifest.json  protocol.rs  proxy.rs  socket.rs  tabs.rs
src/timeline/: interval.rs
src/webext/: dbus.rs  message.rs  protocol.rs  proxy.rs  tabs.rs
src/webext/extension/: background.js  manifest.json  vaxtify.json
webext/: distraction_oni.json  manifest.json
webext-crate/: Cargo.toml
webext-crate/src/: lib.rs
webextension/: background.js  manifest.json
