[package]
name = "vaxtify"
version = "0.0.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"
description = "Integrated distraction manager to regain control of your computer and Internet use"
repository = "https://github.com/pustaczek/vaxtify"
license = "MPL-2.0"
keywords = ["productivity"]

[dependencies]
chrono = "0.4"
dirs = "3.0"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
url = "2.1"
