[package]
name = "vaxtify"
version = "0.0.1"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"
description = "Integrated distraction manager to regain control of your computer and Internet use"
repository = "https://github.com/pustaczek/vaxtify"
license = "MPL-2.0"
keywords = ["productivity"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "3.0"
fixedbitset = "0.3.2"
regex = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { git = "https://github.com/pustaczek/toml-rs" }
url = "2.1"
