[package]
name = "vaxtify"
version = "0.1.5"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
edition = "2018"
description = "Distraction blocker for the stubborn"
repository = "https://github.com/pustaczek/vaxtify"
license = "MPL-2.0"
keywords = ["productivity"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dbus = "0.9.2"
dbus-tree = "0.9.0"
dirs = "3.0.1"
fixedbitset = "0.3.2"
log = "0.4.14"
once_cell = "1.7.0"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
thiserror = "1.0.26"
toml = "0.5.8"
url = "2.2.1"
